# Dev_Techniques-game_of_life

./: CMakeLists.txt  MAKEFILE  Makefile  ansi  ansi_console_size.c  board.h  cell.c  cell.h  celllist.c  celllist.h  cunit_tests.c  draw.c  draw.h  ex  exsdl  file  main.c  mainsdl.c  sdl  sdl.c  test.c
.github/workflows/: main.yml  mainCI.yml
CM/: CMakeLists.txt  main.c
CM/mylib/: CMakeLists.txt  f1.c  f1.h
doc_pages/: mainpage.md  system1.md  system2.md
docs/: Doxyfile
docs/html/: _automated_8h.html  _automated_8h_source.html  _basic_8h.html  _basic_8h_source.html  _c_make_c_compiler_id_013_8c.html  _c_make_c_compiler_id_013_8c.js  _c_make_c_compiler_id_8c.html  _c_make_cache_012_8txt.html  _c_make_cache_8txt.html  _c_make_files_2mygame_8dir_2link_012_8txt.html  _c_make_files_2mygame_8dir_2link_8txt.html  _c_make_lists_8txt.html  _c_make_rule_hashes_012_8txt.html  _c_make_rule_hashes_8txt.html  _c_u_error_8h.html  _c_u_error_8h_source.html  _c_unit_8h.html  _c_unit_8h_source.html  _c_unit__intl_8h.html  _c_unit__intl_8h_source.html  _console_8h.html  _console_8h_source.html  _my_mem_8h.html  _my_mem_8h_source.html  _s_d_l_8h.html  _s_d_l_8h_source.html  _s_d_l__assert_8h_source.html  _s_d_l__atomic_8h.html  _s_d_l__atomic_8h_source.html  _s_d_l__audio_8h.html  _s_d_l__audio_8h_source.html  _s_d_l__bits_8h.html  _s_d_l__bits_8h_source.html  _s_d_l__blendmode_8h.html  _s_d_l__blendmode_8h_source.html  _s_d_l__clipboard_8h.html  _s_d_l__clipboard_8h_source.html  _s_d_l__config_8h_source.html  _s_d_l__cpuinfo_8h.html  _s_d_l__cpuinfo_8h_source.html  (+419 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  (+55 more)
docs/latex/: _automated_8h.tex  _basic_8h.tex  _c_make_c_compiler_id_013_8c.tex  _c_make_c_compiler_id_8c.tex  _c_make_cache_012_8txt.tex  _c_make_files_2mygame_8dir_2link_012_8txt.tex  _c_make_files_2mygame_8dir_2link_8txt.tex  _c_make_lists_8txt.tex  _c_make_rule_hashes_012_8txt.tex  _c_make_rule_hashes_8txt.tex  _c_u_error_8h.tex  _c_unit_8h.tex  _c_unit__intl_8h.tex  _console_8h.tex  _my_mem_8h.tex  _s_d_l_8h.tex  _s_d_l__atomic_8h.tex  _s_d_l__audio_8h.tex  _s_d_l__bits_8h.tex  _s_d_l__blendmode_8h.tex  _s_d_l__clipboard_8h.tex  _s_d_l__cpuinfo_8h.tex  _s_d_l__egl_8h.tex  _s_d_l__endian_8h.tex  _s_d_l__error_8h.tex  _s_d_l__events_8h.tex  _s_d_l__filesystem_8h.tex  _s_d_l__gamecontroller_8h.tex  _s_d_l__gesture_8h.tex  _s_d_l__haptic_8h.tex  _s_d_l__hints_8h.tex  _s_d_l__joystick_8h.tex  _s_d_l__keyboard_8h.tex  _s_d_l__keycode_8h.tex  _s_d_l__loadso_8h.tex  _s_d_l__log_8h.tex  _s_d_l__main_8h.tex  _s_d_l__metal_8h.tex  _s_d_l__mouse_8h.tex  _s_d_l__mutex_8h.tex  (+182 more)
draw/: CMakeLists.txt  a.out  ansi.c  ansi.h  ansi.h.gch  cunit_tests.c  sdl.c  sdl.h
game/: CMakeLists.txt  a.out  cell.c  cell.h  cell.h.gch  celllist.c  celllist.h  celllist.h.gch  cunit_tests.c
lib/: libcunit.1.dylib
